force-app/main/default/objects/ZSFMatOrgv__x/ZSFMatOrgv__x.object-meta.xml
<CustomObject>
    <description>ZSFMatOrgvSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>ZSFMatOrgvSet</externalName>
    <label>ZSFMatOrgv</label>
    <pluralLabel>ZSFMatOrgvSet</pluralLabel>
</CustomObject>