force-app/main/default/objects/ZSFMatOrgv__x/fields/Issample__c.field-meta.xml
<CustomField>
    <fullName>Issample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Issample</description>
    <externalDeveloperName>Issample</externalDeveloperName>
    <label>Issample</label>
    <type>Checkbox</type>
</CustomField>