force-app/main/default/objects/ZSFMatOrgv__x/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>Matnr</description>
    <externalDeveloperName>Matnr</externalDeveloperName>
    <label>Material</label>
    <length>18</length>
    <type>Text</type>
</CustomField>