force-app/main/default/objects/ZSFMatOrgv__x/fields/Modificado__c.field-meta.xml
<CustomField>
    <fullName>Modificado__c</fullName>
    <description>Modificado</description>
    <externalDeveloperName>Modificado</externalDeveloperName>
    <label>Modificado</label>
    <type>DateTime</type>
</CustomField>