force-app/main/default/objects/ZSFMatOrgv__x/fields/Stkprog__c.field-meta.xml
<CustomField>
    <fullName>Stkprog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stkprog</description>
    <externalDeveloperName>Stkprog</externalDeveloperName>
    <label>Stkprog</label>
    <type>Checkbox</type>
</CustomField>